--- a/UPrOpiedades/web/index.html
+++ b/UPrOpiedades/web/index.html
@@ -1,16 +1,67 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
+<html lang="es">
     <head>
-        <title>TODO supply a title</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Inmobiliaria</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
-        <div>TODO write content</div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <div class="container-fluid d-flex justify-content-between">
+                <a class="navbar-brand" href="#">Inmobiliaria</a>
+                <div class="d-flex">
+                    <button class="navbar-toggler shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-center mt-3" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Propiedades</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Usuarios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Propietarios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Inquilinos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Seguros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Operaciones</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Valoraciones</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Mobiliario</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="d-flex">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Login</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <!-- Main Content -->
+        <div class="container mt-4">
+            <div class="row justify-content-center">
+                <div class="col-md-8 text-center">
+                    <h1>Bienvenidos a la Inmobiliaria</h1>
+                </div>
+            </div>
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
