Retoque index y DAODireccion

--- a/UPrOpiedades/web/index.html
+++ b/UPrOpiedades/web/index.html
@@ -9,7 +9,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container-fluid d-flex justify-content-between">
-                <a class="navbar-brand" href="#">Inmobiliaria</a>
+                <a class="navbar-brand" href="#">UPrOpiedades</a>
                 <div class="d-flex">
                     <button class="navbar-toggler shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -18,9 +18,6 @@
                         <ul class="navbar-nav">
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Propiedades</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Usuarios</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Propietarios</a>
@@ -38,7 +35,7 @@
                                 <a class="nav-link" href="#">Valoraciones</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Mobiliario</a>
+                                <a class="nav-link" href="#">Favoritos</a>
                             </li>
                         </ul>
                     </div>
